STAC-14043 Add some debug logs [image_only]

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -181,6 +181,9 @@ deps_rpm:
     when:
       - runner_system_failure
       - stuck_or_timeout_failure
+  rules:
+    - if: $CI_COMMIT_MESSAGE =~ /\[image_only]/
+      when: never
 
 deps_win:
   stage: prepare
@@ -212,6 +215,9 @@ deps_win:
     when:
       - runner_system_failure
       - stuck_or_timeout_failure
+  rules:
+    - if: $CI_COMMIT_MESSAGE =~ /\[image_only]/
+      when: never
 
 ## build stage
 
@@ -658,6 +664,9 @@ pre_release_cluster_agent_image:
     - export LANG=en_US.UTF-8
   retry:
     max: 2
+  rules:
+    - if: $CI_COMMIT_MESSAGE =~ /\[image_only]/
+      when: never
 
 # Base artifacts for create and test steps
 .molecule_artifacts: &molecule_artifacts
@@ -669,6 +678,9 @@ pre_release_cluster_agent_image:
       - $CI_PROJECT_DIR/.cache
       - $MOLECULE_EPHEMERAL_DIRECTORY
     expire_in: 1 week
+  rules:
+    - if: $CI_COMMIT_MESSAGE =~ /\[image_only]/
+      when: never
 
 # Primary create steps for all the molecule builds
 .molecule_create: &molecule_create
