STAC-14043 Created image-only CI option [image-only]

--- a/.gitlab-ci-cluster-agent.yml
+++ b/.gitlab-ci-cluster-agent.yml
@@ -24,6 +24,10 @@ stages:
   rm -f go-bin.tar.gz go-pkg.tar.gz vendor.tar.gz || true
   echo "~~~~~> /Trying..."
 
+.exclude_on_image_only: &exclude_on_image_only
+  rules:
+    - if: $CI_COMMIT_MESSAGE =~ /\[image-only]/
+      when: never
 
 ######################### /pipeline bricks
 
@@ -238,6 +242,7 @@ pre_release_cluster_agent_image:
 
 # Core Molecule Structure for all the molecule steps
 .molecule: &molecule
+  <<: *exclude_on_image_only
   interruptible: true
   resource_group: "$STS_VER-$MAJOR_VERSION-$PYTHON_RUNTIMES-$CI_COMMIT_BRANCH-$MOLECULE_SCENARIO-branch-lock"
   dependencies: []
@@ -249,12 +254,10 @@ pre_release_cluster_agent_image:
     - export LANG=en_US.UTF-8
   retry:
     max: 2
-  rules:
-    - if: $CI_COMMIT_MESSAGE =~ /\[image_only]/
-      when: never
 
 # Base artifacts for create and test steps
 .molecule_artifacts: &molecule_artifacts
+  <<: *exclude_on_image_only
   artifacts:
     when: always
     paths:
@@ -270,6 +273,7 @@ pre_release_cluster_agent_image:
 # Primary create steps for all the molecule builds
 .molecule_create: &molecule_create
   <<: *molecule_artifacts
+  <<: *exclude_on_image_only
   stage: prepare
   script:
     - cd $CI_PROJECT_DIR/test
@@ -278,6 +282,7 @@ pre_release_cluster_agent_image:
 # Primary test steps for all the molecule builds
 .molecule_test: &molecule_test
   <<: *molecule_artifacts
+  <<: *exclude_on_image_only
   stage: acceptance
   timeout: 50 minutes
   script:
@@ -286,6 +291,7 @@ pre_release_cluster_agent_image:
 
 # Primary destroy steps for all the molecule builds
 .molecule_destroy: &molecule_destroy
+  <<: *exclude_on_image_only
   stage: cleanup
   script:
     - cd $CI_PROJECT_DIR/test
