--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -70,6 +70,10 @@ stages:
     when: manual
 ######################### /pipeline bricks
 
+.exclude_on_image_only: &exclude_on_image_only
+  rules:
+    - if: $CI_COMMIT_MESSAGE =~ /\[image-only]/
+      when: never
 
 before_script:
   - *configure_debian_env_script
@@ -153,6 +157,7 @@ deps_deb:
       - stuck_or_timeout_failure
 
 deps_rpm:
+  <<: *exclude_on_image_only
   stage: prepare
   interruptible: true
   image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos7_20211004_v7_0
@@ -181,9 +186,6 @@ deps_rpm:
     when:
       - runner_system_failure
       - stuck_or_timeout_failure
-  rules:
-    - if: $CI_COMMIT_MESSAGE =~ /\[image_only]/
-      when: never
 
 deps_win:
   stage: prepare
@@ -215,9 +217,6 @@ deps_win:
     when:
       - runner_system_failure
       - stuck_or_timeout_failure
-  rules:
-    - if: $CI_COMMIT_MESSAGE =~ /\[image_only]/
-      when: never
 
 ## build stage
 
@@ -410,6 +409,7 @@ build_deb:
       - always
 
 build_rpm:
+  <<: *exclude_on_image_only
   stage: build
   interruptible: true
   image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos7_20211004_v7_0
@@ -471,6 +471,7 @@ build_rpm:
       - always
 
 build_win:
+  <<: *exclude_on_image_only
   stage: build
   interruptible: true
   needs:
@@ -518,6 +519,7 @@ test_deb_renaming:
       - stuck_or_timeout_failure
 
 test_rpm_renaming:
+  <<: *exclude_on_image_only
   stage: test
   interruptible: true
   image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos6_20190429
@@ -557,6 +559,7 @@ pre_release_deb:
       - stuck_or_timeout_failure
 
 pre_release_win:
+  <<: *exclude_on_image_only
   stage: pre_release
   interruptible: true
   needs:
@@ -653,6 +656,7 @@ pre_release_cluster_agent_image:
 
 # Core Molecule Structure for all the molecule steps
 .molecule: &molecule
+  <<: *exclude_on_image_only
   interruptible: true
   resource_group: "$STS_VER-$MAJOR_VERSION-$PYTHON_RUNTIMES-$CI_COMMIT_BRANCH-$MOLECULE_SCENARIO-branch-lock"
   dependencies: []
@@ -664,12 +668,10 @@ pre_release_cluster_agent_image:
     - export LANG=en_US.UTF-8
   retry:
     max: 2
-  rules:
-    - if: $CI_COMMIT_MESSAGE =~ /\[image_only]/
-      when: never
 
 # Base artifacts for create and test steps
 .molecule_artifacts: &molecule_artifacts
+  <<: *exclude_on_image_only
   artifacts:
     when: always
     paths:
@@ -678,9 +680,6 @@ pre_release_cluster_agent_image:
       - $CI_PROJECT_DIR/.cache
       - $MOLECULE_EPHEMERAL_DIRECTORY
     expire_in: 1 week
-  rules:
-    - if: $CI_COMMIT_MESSAGE =~ /\[image_only]/
-      when: never
 
 # Primary create steps for all the molecule builds
 .molecule_create: &molecule_create
@@ -1215,6 +1214,7 @@ release_rpm:
       - stuck_or_timeout_failure
 
 release_win:
+  <<: *exclude_on_image_only
   interruptible: true
   stage: release
   dependencies:
