--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -589,6 +589,7 @@ pre_release_win:
       - stuck_or_timeout_failure
 
 pre_release_rpm:
+  <<: *exclude_on_image_only
   stage: pre_release
   interruptible: true
   image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
