--- a/test/molecule-role/molecule/vms/files/receiver/docker-compose.yml
+++ b/test/molecule-role/molecule/vms/files/receiver/docker-compose.yml
@@ -14,26 +14,12 @@ services:
       retries: 3
 
   kafka:
-    image: wurstmeister/kafka:2.12-2.3.1
-    ports:
-      - 9092:9092
     depends_on:
       zookeeper:
         condition: service_healthy
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: kafka
-      KAFKA_ADVERTISED_PORT: 9092
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "sts_connection_beat_events:1:1,sts_correlate_endpoints:1:1,sts_generic_events:1:1,sts_intake_health:1:1,sts_multi_metrics:1:1,sts_state_events:1:1,sts_topology_events:1:1,sts_topo_process_agents:1:1,sts_trace_events:1:1"
-    volumes:
-      - "./verify-or-create-topics.sh:/usr/local/bin/verify-or-create-topics.sh"
-    healthcheck:
-      test: [ "CMD", "verify-or-create-topics.sh" ]
-      interval: 10s
-      timeout: 45s
-      retries: 10
-    restart: always
-    mem_limit: 1G
+    extends:
+      file: docker-compose.base.yml
+      service: kafka
 
   receiver:
     image: "quay.io/stackstate/stackstate-receiver:${STACKSTATE_BRANCH}"
