--- a/test/molecule-role/molecule/kubernetes/group_vars/all.yml
+++ b/test/molecule-role/molecule/kubernetes/group_vars/all.yml
@@ -19,7 +19,7 @@ cluster_agent_docker_repo: "{{ lookup('env', 'STS_DOCKER_TEST_REPO_CLUSTER') or 
 quay_password: "{{ lookup('env', 'quay_password') or QUAY_PASSWORD }}"
 quay_user: "{{ lookup('env', 'quay_user') or QUAY_USER }}"
 stackstate_branch: "{{ lookup('env', 'STACKSTATE_BRANCH') or STACKSTATE_BRANCH }}"
-
+api_key: "API_KEY"
 cluster_name: "molecule_k8s_test"
 dnat_service_port: 321
 dnat_server_port: 123
