--- a/test/molecule-role/molecule/kubernetes/playbook.setup.prepare.yml
+++ b/test/molecule-role/molecule/kubernetes/playbook.setup.prepare.yml
@@ -10,6 +10,13 @@
     - include_tasks: ../common/prepare/ubuntu18-automatic-updates.yml
     - include_tasks: ../common/prepare/install-provisioning-dependencies.yml
 
+    - name: Install Helm for agent deployment
+      shell: curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+      become: yes
+
+    - name: Add StackState Repo to Helm
+      shell: helm repo add stackstate https://helm.stackstate.io && helm repo update
+
     - name: Configure aws credentials
       copy:
         content: |
@@ -37,6 +44,11 @@
         src: "files/receiver"
         dest: "/home/ubuntu/"
 
+    - name: Copy Helm values
+      copy:
+        src: "files/template"
+        dest: "/home/ubuntu/"
+
     - name: Copy Verify and Create Script file
       copy:
         src: ./../verify-or-create-topics.sh
@@ -47,11 +59,6 @@
       shell: echo token=$(cat /dev/urandom | env LC_CTYPE=C tr -dc 'a-zA-Z0-9' | fold -w 32 | head -n 1) > env.txt
       args:
         chdir: /home/ubuntu/deployment/agents/overlays
-
-    - name: Kustomization template
-      template:
-        src: files/template/kustomization.yaml
-        dest: /home/ubuntu/deployment/agents/overlays
 
     - name: Configure .env file used by docker-compose
       copy:
