--- a/test/molecule-role/molecule/kubernetes/playbook/setup/cleanup.tasks-cluster.yml
+++ b/test/molecule-role/molecule/kubernetes/playbook/setup/cleanup.tasks-cluster.yml
@@ -1,3 +1,4 @@
 ---
+# - include_tasks: ../_shared/helm/uninstall-stackstate-agent.yml
 - include_tasks: ../_shared/kubectl/delete-namespace.yml
 - include_tasks: ../_shared/kubectl/delete-manifests.yml
