STAC-14264: Revert import changes

--- a/cmd/agent/common/tests/a6_conf/conf.d/cassandra.d/conf.yaml
+++ b/cmd/agent/common/tests/a6_conf/conf.d/cassandra.d/conf.yaml
@@ -14,5 +14,5 @@ init_config:
 instances:
 - cassandra_aliasing: true
   host: localhost
-  collection_interval: 40
+  min_collection_interval: 40
   port: 7199
