--- a/test/molecule-role/molecule/_shared/kubectl/wait-for-stackstate-node-agents.yml
+++ b/test/molecule-role/molecule/_shared/kubectl/wait-for-stackstate-node-agents.yml
@@ -1,7 +1,7 @@
 ---
 - name: Wait for the stackstate node agents to start doing their thing (otherwise connections might occur after agent startup)
   ignore_errors: true
-  command: kubectl -n={{ namespace }} wait --all --for=condition=Ready --timeout=360s -l app=stackstate-agent pod
+  command: kubectl -n={{ namespace }} wait --all --for=condition=Ready --timeout=360s -l app.kubernetes.io/component=agent pod
   args:
     chdir: /home/ubuntu/deployment/agents
   environment:
