--- a/test/molecule-role/molecule/_shared/kubectl/wait-for-stackstate-cluster.yml
+++ b/test/molecule-role/molecule/_shared/kubectl/wait-for-stackstate-cluster.yml
@@ -1,6 +1,6 @@
 ---
 - name: Wait for the stackstate cluster agent to start doing it's thing
-  command: kubectl -n={{ namespace }} wait --all --for=condition=Ready --timeout=360s -l app=stackstate-cluster-agent pod
+  command: kubectl -n={{ namespace }} wait --all --for=condition=Ready --timeout=360s -l app.kubernetes.io/component=cluster-agent pod
   args:
     chdir: /home/ubuntu/deployment/agents
   environment:
