fix kubeconfig mode, remove deleted task

--- a/test/molecule-role/molecule/_shared/kubectl/terraform-make.yml
+++ b/test/molecule-role/molecule/_shared/kubectl/terraform-make.yml
@@ -22,10 +22,10 @@
     chdir: /home/ubuntu/deployment/aws-eks/tf-cluster
     target: kubeconfig
 
-# - name: Change kubeconfig permissions
-#   file:
-#     path: /home/ubuntu/deployment/aws-eks/tf-cluster/kubeconfig
-#     mode: '0600'
+ - name: Change kubeconfig permissions
+   file:
+     path: /home/ubuntu/deployment/aws-eks/tf-cluster/kubeconfig
+     mode: '0600'
 
 - name: Run make config-map-aws-auth
   make:
