--- a/test/molecule-role/molecule/kubernetes/group_vars/all.yml
+++ b/test/molecule-role/molecule/kubernetes/group_vars/all.yml
@@ -25,4 +25,4 @@ dnat_service_port: 321
 dnat_server_port: 123
 container_to_container_server_port: 234
 headless_service_port: 543
-namespace: "{{ agent_current_branch.replace('.','-') | lower }}"
+namespace: "{{ agent_current_branch.replace('.','-').replace('_','-') | lower }}"
