Fix docker deb repo

--- a/test/molecule-role/molecule/vms/playbook/run/prepare.tasks.prepare.network.yml
+++ b/test/molecule-role/molecule/vms/playbook/run/prepare.tasks.prepare.network.yml
@@ -26,11 +26,15 @@
   become: yes
 - name: Add Docker GPG APT key
   become: true
-  apt_key: url=https://download.docker.com/linux/ubuntu/gpg
+  apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    state: present
 - name: Add Docker APT repository
   become: true
   apt_repository:
     repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable
+    state: present
+    update_cache: true
 - name: Install APT packages
   become: true
   apt:
