STAC-14552 Extract resource group name

--- a/.gitlab-ci-cluster-agent.yml
+++ b/.gitlab-ci-cluster-agent.yml
@@ -297,7 +297,7 @@ pre_release_cluster_agent_image:
 molecule_kubernetes_create:
   <<: *molecule
   <<: *molecule_create
-  resource_group: eks_test_cluster_1_21
+  resource_group: $MOLECULE_K8S_CLUSTER
   rules:
     - *kubernetes_ignore_rule
     - when: always
@@ -307,7 +307,7 @@ molecule_kubernetes_create:
 molecule_kubernetes_test:
   <<: *molecule
   <<: *molecule_test
-  resource_group: eks_test_cluster_1_21
+  resource_group: $MOLECULE_K8S_CLUSTER
   rules:
     - *kubernetes_ignore_rule
     - when: always
@@ -324,7 +324,7 @@ molecule_kubernetes_failure_cleanup:
   <<: *molecule
   <<: *molecule_artifacts
   <<: *molecule_destroy
-  resource_group: eks_test_cluster_1_21
+  resource_group: $MOLECULE_K8S_CLUSTER
   rules:
     - *kubernetes_ignore_rule
     - when: always
@@ -340,7 +340,7 @@ molecule_kubernetes_success_cleanup:
   <<: *molecule
   <<: *molecule_artifacts
   <<: *molecule_destroy
-  resource_group: eks_test_cluster_1_21
+  resource_group: $MOLECULE_K8S_CLUSTER
   rules:
     - *kubernetes_ignore_rule
     - when: always
