Manual trigger for localinstall and secrets

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -903,7 +903,7 @@ molecule_localinstall_create:
     - *localinstall_ignore_rule
     - *localinstall_master_only_rule
     - *localinstall_acceptance_rule
-    - when: never
+    - when: manual
   variables:
     MOLECULE_SCENARIO: localinstall
 
@@ -914,7 +914,7 @@ molecule_localinstall_test:
     - *localinstall_ignore_rule
     - *localinstall_master_only_rule
     - *localinstall_acceptance_rule
-    - when: never
+    - when: manual
   variables:
     MOLECULE_SCENARIO: localinstall
   dependencies:
@@ -933,7 +933,7 @@ molecule_localinstall_failure_cleanup:
     - *localinstall_ignore_rule
     - *localinstall_master_only_rule
     - *localinstall_acceptance_on_failure_rule
-    - when: never
+    - when: manual
   needs:
     - molecule_localinstall_test
     - molecule_localinstall_create
@@ -947,7 +947,7 @@ molecule_localinstall_success_cleanup:
     - *localinstall_ignore_rule
     - *localinstall_master_only_rule
     - *localinstall_acceptance_on_success_rule
-    - when: never
+    - when: manual
   dependencies:
     - molecule_localinstall_test
     - molecule_localinstall_create
@@ -983,7 +983,7 @@ molecule_secrets_create:
     - *secrets_ignore_rule
     - *secrets_master_only_rule
     - *secrets_acceptance_rule
-    - when: never
+    - when: manual
   variables:
     MOLECULE_SCENARIO: secrets
 
@@ -994,7 +994,7 @@ molecule_secrets_test:
     - *secrets_ignore_rule
     - *secrets_master_only_rule
     - *secrets_acceptance_rule
-    - when: never
+    - when: manual
   variables:
     MOLECULE_SCENARIO: secrets
   dependencies:
@@ -1012,7 +1012,7 @@ molecule_secrets_failure_cleanup:
     - *secrets_ignore_rule
     - *secrets_master_only_rule
     - *secrets_acceptance_on_failure_rule
-    - when: never
+    - when: manual
   needs:
     - molecule_secrets_test
     - molecule_secrets_create
@@ -1026,7 +1026,7 @@ molecule_secrets_success_cleanup:
     - *secrets_ignore_rule
     - *secrets_master_only_rule
     - *secrets_acceptance_on_success_rule
-    - when: never
+    - when: manual
   dependencies:
     - molecule_secrets_test
     - molecule_secrets_create
